@@ -1,3 +1,6 @@
+4 June 2003
+Major improvements in memory usage.
+
 3 June 2003
 Appliced a patch from Giulio Eulisse that allows unnamed enumerations to be
 exported with an AllFromHeader construct. Thanks a lot Giulio!
